2007-05-13  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/pango.defs:
	* gnome/defs/pango-types.defs: Generate for Pango 1.14.

	* gnome/defs/Makefile.am (pango): Add rule for regenerating pango.
	A bit verbose because pango has lots of #ifdef ENGINE, BACKEND,
	etc.
	
	* gnome/defs/Makefile.am (atk): Add regeneration rules for ATK.
	(atk): Atk doesn't have type-ignores.

	* gnome/defs/atk.defs:
	* gnome/defs/atk-types.defs: Generate for ATK 1.12, from Gnome
	2.16.

	* tools/ignores-diff:
	* tools/ignore-new-functions: 
	* tools/defs-to-ignores: New tools, based on each others' code.

	* gnome/defs/Makefile.am (glib): Add target to regen glib defs
	files.
	(DEFS_HEADER_DIR): Make it possible to make
	DEFS_HEADER_DIR=/opt/gnome2/include glib.

	* tools/defs-diff: Fix a bug.

	* gnome/defs/glib.defs: 
	* gnome/defs/glib-types.defs: Generated from GLib 2.10 headers,
	autogenerated for the first time. Requires loads of ignores.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-25  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/defs/Makefile.am (defs_DATA): Make out-of-tree-build-safe.

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

2004-11-16  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/Makefile.am (defs_DATA): Just do *.defs, to prevent
	bugs.

2004-11-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/defs/libgnomecanvas.defs: Remove type defs.  Include
	libgnomecanvas-types.defs.

2004-11-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/defs/glib.defs: Bugfix: include overrides after types.

2004-11-09  Andy Wingo  <wingo@pobox.com>
