@@ -1,0 +1,5 @@
+;; -*- scheme -*-
+;; Enumerations and flags ...
+
+;; -*- scheme -*-
+; object definitions ...
